# my.so

mylib/: CMakeLists.txt  package.xml
mylib/src/: myclass.cpp
mynode/: CMakeLists.txt  package.xml
mynode/include/mynode/: myclass.hpp
mynode/src/: mycpp.cpp
